tests/specs/test/doc/main.ts
/**
 * ```
 * import * as doc from "./main.ts";
 * ```
 *
 * ```js
 * import * as doc from "./main.ts";
 * ```
 *
 * ```jsx
 * import * as doc from "./main.ts";
 * ```
 *
 * ```ts
 * import * as doc from "./main.ts";
 * ```
 *
 * ```tsx
 * import * as doc from "./main.ts";
 * ```
 *
 * ```text
 * import * as doc from "./main.ts";
 * ```
 *
 * @module doc
 */

/**
 * ```ts
 * import { check } from "./main.ts";
 *
 * console.assert(check() == 42);
 * ```
 */
export function check(): string {
  return "check";
}
